# nl-gov-data-plugin

./: .audit-allowlist.json  .copier-answers.yml  .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.agents/: mcp.json
.claude-plugin/: plugin.json
.github/scripts/: check-skill-deps.py
.github/workflows/: ci.yml
hooks/: hooks.json
skills/chart/: SKILL.md
skills/diagram/: .deps.json  SKILL.md
skills/diagram/references/: brand-mapping.md  excalidraw-elements.md  recipes.md
skills/diagram/scripts/: diagram-to-html.js  render-diagram.js
skills/docx/: .deps.json  SKILL.md
skills/dutch-gov-data/: SKILL.md
skills/dutch-gov-data/references/: tool-reference.md
skills/example/: SKILL.md
skills/mermaid/: SKILL.md
skills/mermaid/references/: syntax-guide.md
skills/nl-gov-data/: SKILL.md
skills/nl-gov-data/references/: output-contract.md  tool-reference.md  workflow-templates.md
skills/nl-gov-data/scripts/: validate_workflows.py
skills/pdf/: SKILL.md
skills/pdf-hd/: SKILL.md
skills/pptx/: .deps.json  SKILL.md  html2pptx.md
skills/pptx-hd/: .deps.json  SKILL.md  html2pptx-hd.md
skills/pptx-hd/references/: design-patterns.md
skills/pptx-hd/scripts/: brand-hd.js  build-branded-hd.js  html2pptx-hd.js
skills/pptx/references/: design-guide.md
skills/pptx/scripts/: build-branded.js
skills/xlsx/: SKILL.md
src/: image-utils.js  image_utils.py
